# mdviewer

./: .gitignore  LICENSE  MdViewer.sln  README.md
.github/workflows/: build-go-windows.yml  build-rust-windows.yml  build-windows.yml
examples/: sample.md
scripts/: fetch-assets.ps1
src/MdViewer/: MainForm.cs  MdViewer.csproj  Program.cs
src/MdViewer.Go/: README.md  go.mod  main.go
src/MdViewer.Rust/: Cargo.toml  README.md  build.rs
src/MdViewer.Rust/src/: main.rs  platform.rs
src/MdViewer.Rust/src/platform/: stub.rs  windows.rs
src/MdViewer/assets/: viewer.css  viewer.html
