[package]
name = "mdviewer-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[package.metadata]
description = "Experimental Rust native shell for MdViewer"

[build-dependencies]
embed-resource = "2"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webview2-com = "0.39.1"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
